# quickview

./: LICENSE  README.md  pyproject.toml
quickview/: __init__.py  __main__.py  app.py  cli.py  utils.py
quickview/viewers/: __init__.py  audio_viewer.py  base.py  csv_viewer.py  docx_viewer.py  excel_viewer.py  image_viewer.py  pdf_viewer.py  svg_viewer.py  text_viewer.py  video_viewer.py  zip_viewer.py
